Move main and settings classes to root
To keep Java's shared prefs with package name (not .core).